tests/type-errors/no_container_partition_var.arl
archetype no_container_partition_var

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: partition<et>;
}

entry start () {
	effect {
		var ev : partition<et> = [];
		dorequire (ev.count() = 0, "ko")
	}
}
